# speech2md

./: .gitignore  LICENSE  config.example.toml  pyproject.toml
src/speech2md/cli/: app.py
src/speech2md/cli/commands/: config_cmd.py  listen.py
src/speech2md/core/: config.py  export.py  models.py  pipeline.py
src/speech2md/core/postprocess/: formatter.py  llm_client.py  prompts.py
src/speech2md/core/stt/: base.py  whisper_engine.py
tests/: test_models.py
